[package]
name = "deadline"
version = "0.1.1"
edition = "2021"
authors = ["niklaslong <niklas@long.ch>"]
description = "A one-macro crate to ensure assertions meet their deadlines."
license = "MIT"
repository = "https://github.com/niklaslong/deadline"
documentation = "https://docs.rs/deadline"
readme = "README.md"
categories = ["asynchronous", "development-tools"]
keywords = ["async", "testing", "macros"]

[dependencies.tokio]
version = "1.20.1"
features = ["time"]

[dev-dependencies.tokio]
version = "1.20.1"
features = ["full"]
